--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -28,8 +28,7 @@
                     <div class="coverflow-overlay-right recital-info-right">
                         <div class="coverflow-recital-title">
                             <%= recital.split_city %>
-                            <br />
-                            站
+                            <div>站</div>
                         </div>
                         <div class="recital-status">
                             <% if recital.sold_out? %>
