--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -76,7 +76,10 @@
 
 .coverflow-recital-title {
     padding: 0.5rem;
-    font-size: x-large;
+    font-size: 2.2em;
+    @include media-mobile {
+        font-size: 1.5em;
+    }
     font-weight: bolder;
     text-shadow: 1px 0 1px black;
     -webkit-user-select:none;
@@ -89,7 +92,26 @@
     }
 }
 
+.coverflow-recital-date {
+    position: absolute;
+    white-space: nowrap;
+    padding: 0 0 3em 1em;
+    @include mq($until: desktop) {
+        font-size: 0.8em;
+        padding-bottom: 1.5em;
+    }
+    @include media-mobile {
+        display: none;
+    }
+    transform: rotate3d(0, 0, 1, 90deg) translate3d(0, 50%, 0);
+    opacity: 0.8;
+}
+
 .recital-status {
+    font-size: 1em;
+    @include media-mobile {
+        font-size: 0.9em;
+    }
     position: absolute;
     bottom: 0;
     padding: 0.9rem;
