--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -7,7 +7,7 @@
             <%= link_to :back do %>
                 <button class="button nwui-back-btn float-left">返回</button>
             <% end %>
-            <button class="button nwui-submit-btn float-right">提交</button>
+            <!--<button class="button nwui-submit-btn float-right">提交</button>-->
             <div class="nwui-header-title">提交订单</div>
         </div>
 
@@ -43,9 +43,12 @@
         </div>
 
         <div class="submit-lastinfo">
-            <div class="submit-subtotal">
+            <!--<div class="submit-subtotal">
                 应付总金额：<span class="submit-total">￥<%= @order.price %></span>
-            </div>
+            </div>-->
+            <br />
+            <br />
+            <br />
         </div>
 
     </div>
