--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -22,7 +22,7 @@
                                 正在预订中
                                 <% end %>
                             </div>
-                            <div><%= (recital.start_time.strftime('%Y 年 %m 月 %d 日') unless recital.start_time.nil?) + ' - ' + recital.music_hall%></div>
+                            <div class="font-larger"><%= (recital.start_time.strftime('%Y 年 %m 月 %d 日') unless recital.start_time.nil?) + ' - ' + recital.music_hall%></div>
                         </div>
                     </div>
                     <div class="coverflow-overlay-right recital-info-right">
