--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -5,7 +5,7 @@
 
         <div class="nwui-header align-center clearfix">
             <%= link_to :back do %>
-                <button class="button nwui-back-btn float-left">返回</button>
+                <button class="button nwui-back-btn float-left" type="button">返回</button>
             <% end %>
             <!--<button class="button nwui-submit-btn float-right">提交</button>-->
             <div class="nwui-header-title">提交订单</div>
