Translate devise mailer

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>您好 <%= @resource.name %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>某人试图申请修改您的密码，您可以通过点击如下链接进入密码修改界面:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to '修改密码', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>如果您没有申请，请忽略这封邮件。</p>
+<p>在您进入上方链接进行操作并创建新的密码之前，您的密码是不会改变的。</p>
+<p>祝您购票愉快！</p>
