--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<p>欢迎 <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>您可以通过点击下方链接验证您的账户:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to '验证我的账户', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>祝您购票愉快！</p>
