--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>您好 <%= @resource.name %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>您的账号由于连续多次失败登录而被暂停使用。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>点击下方链接解锁您的账号:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to '解锁我的账户', unlock_url(@resource, unlock_token: @token) %></p>
+<p>感谢您的配合，祝您购票愉快！</p>
