--- a/app/assets/stylesheets/submit.scss
+++ b/app/assets/stylesheets/submit.scss
@@ -79,6 +79,11 @@
     background: #E3CDBA;
     border-radius: 1px;
     padding: 0.6em 2.5em;
+    transition: background 0.2s ease-in-out;
+    
+    &.submit-submit-btn-ok {
+        background: #28B1BF;
+    }
 }
 
 .submit-total-badge {
