--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,5 +1,8 @@
 
 <div class="section-recitals">
+    <div class="section-title">
+        购票
+    </div>
     <div class="coverflow-cont">
         <div class="coverflow">
             <% @recitals.each do |recital| %>
@@ -68,6 +71,9 @@
 <% end %>
 
 <div class="section-intro">
+    <div class="section-title">
+        Animenz 介绍
+    </div>
     <div class="outer-container clearfix">
         <div class="index-intro-image-cont">
             <%= image_tag 'index-animenz.png', :class => 'index-intro-image' %>
@@ -88,6 +94,9 @@
 </div>
 
 <div class="section-intro-video">
+    <div class="section-title">
+        宣传视频
+    </div>
     <div class="outer-container">
         <div class="index-intro-video-cont">
             <div class="index-intro-video">
@@ -98,6 +107,9 @@
 </div>
 
 <div class="section-videos">
+    <div class="section-title">
+        Animenz 视频
+    </div>
     <div class="outer-container">
         <div class="index-videos clearfix">
             <% @videos.each do |video| %>
