--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,4 @@
-<p>您好 <%= @resource.name %>!</p>
+<p>您好 <%= @resource.name %>！</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>我们诚此告知您，您的密码已经被修改。</p>
+<p>若该行为并非您所为，请尽快联系管理员处理，祝您购票愉快！</p>
