--- a/app/assets/stylesheets/seat.scss
+++ b/app/assets/stylesheets/seat.scss
@@ -40,6 +40,7 @@
 
 .seat {
     display: inline-block;
+    position: relative;
     -webkit-user-select: none;
     input[type="checkbox"], .seat-checkbox {
         // visibility: hidden;
@@ -72,6 +73,24 @@
         margin: 0.2em 0.2em;
         transition: all 0.2s ease-in-out;
         box-sizing: border-box;
+    }
+    
+    .seat-tooltip {
+        position: absolute;
+        background-color: #eee;
+        color: #444;
+        padding: 0.5em;
+        line-height: 1.2;
+        border-radius: 2px;
+        display: none;
+        bottom: 100%;
+        right: -100%;
+        pointer-events: none;
+        box-shadow: 2px 2px 6px $darken-50;
+    }
+    
+    &:hover > .seat-tooltip {
+        display: block;
     }
 }
 
