--- a/app/assets/stylesheets/rx.scss
+++ b/app/assets/stylesheets/rx.scss
@@ -1,26 +1,61 @@
 @import "cd";
 @import "essential";
 
-.rx-seatchooser {
-    &.seat-too-much {
-        label.seat-label {
-            pointer-events: none;
-            cursor: not-allowed;
-            opacity: 0.5;
-        }
-        input[type="checkbox"]:checked + label.seat-label {
-            pointer-events: auto;
-            cursor: pointer;
-            opacity: 1.0;
+.seat-too-much {
+    label.seat-label {
+        pointer-events: none;
+        cursor: not-allowed;
+        opacity: 0.5;
+    }
+    input[type="checkbox"]:checked + label.seat-label {
+        pointer-events: auto;
+        cursor: pointer;
+        opacity: 1.0;
+    }
+}
+
+.rx-seatchooser-wrap {
+    display: table;
+    width: 100%;
+    padding: 1em;
+    box-sizing: border-box;
+    table-layout: fixed;
+    .rx-seatchooser-main {
+        display: table-cell;
+        vertical-align: top;
+    }
+    .rx-seatchooser-second {
+        display: table-cell;
+        vertical-align: top;
+        width: 16em;
+        background-color: #37474F;
+        box-shadow: 1px 0 2px $darken-40 inset;
+        border-radius: 0 0.5em 0.5em 0;
+        // background: white;
+    }
+}
+
+ul.rx-seatchosen-list {
+    padding: 0;
+    margin: 0;
+    li {
+        padding: 0.5em 0.5em 0.5em 1em;
+        list-style: none;
+        background-color: #455A64;
+        line-height: 2;
+        box-shadow: 0 -1px 1px $darken-50 inset;
+        
+        &:first-child {
+            border-radius: 0 0.5em 0 0;
         }
     }
 }
 
 .rx-seatchooser-floor-cont {
 
-    margin: 0.5em;
+    // margin: 0.5em;
     padding: 0.5em 0;
-    border-radius: 0.5em;
+    border-radius: 0.5em 0 0 0.5em;
     background-color: #263238;
     overflow-x: auto;
     overflow-y: hidden;
