--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -280,3 +280,7 @@ input[type="password"] {
     @include media-desktop {
         display: none !important; }
 }
+.block-mobile {
+    @include media-mobile {
+        display: block !important; }
+}
