--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -98,7 +98,7 @@
     <div class="outer-container">
         <div class="index-intro-video-cont">
             <div class="index-intro-video">
-                <%= link_to '#', :class => 'video-modal', :data => { :avid => @indexVideo.avId } do %>
+                <%= link_to 'javascript:;', :class => 'video-modal', :data => { :avid => @indexVideo.avId } do %>
                     <%= image_tag @indexVideo.screenshot.url(:large) %>
                 <% end %>
             </div>
@@ -113,7 +113,7 @@
             <% @videos.each do |video| %>
             <div class="index-video-item-cont">
                 <div class="index-video-item">
-                    <%= link_to '#', :class => 'video-modal', :data => { :avid => video.avId } do %>
+                    <%= link_to 'javascript:;', :class => 'video-modal', :data => { :avid => video.avId } do %>
                         <%= image_tag video.screenshot.url(:medium) %>
                     <% end %>
                     <div class="index-video-title">
@@ -145,11 +145,7 @@
             return ret;
         }
 
-        $('.video-modal').on('click', function (e) {
-
-            var width = 569, height = 440;
-            var avId = e.currentTarget.dataset.avid;
-
+        function createModal(width, height, avId) {
             var overlay = createElementWithClassName('div', 'index-video-modal-overlay');
 
             var closeButton = createElementWithClassName('div', 'index-video-modal-close');
@@ -170,16 +166,24 @@
             })
             overlay.appendChild(modalElement);
 
-            modalElement.insertAdjacentHTML('beforeend',
+            document.body.appendChild(overlay);
+            document.body.style.overflow = 'hidden';
+
+            return modalElement;
+        }
+
+        $('.video-modal').on('click', function (e) {
+            var width = 569, height = 440;
+            var avId = e.currentTarget.getAttribute('data-avid');
+
+            // var modalElement = createModal(width, height);
+            createModal(width, height).insertAdjacentHTML('beforeend',
                 '<object width="' + width + 'px" height="' + height +
                 'px" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="src" value="http://static.hdslb.com/miniloader.swf?aid=' +
                 avId + '&page=1" /><embed width="' + width + 'px" height="' + height +
                 'px" type="application/x-shockwave-flash" src="http://static.hdslb.com/miniloader.swf?aid=' +
                 avId + '&page=1" /></object>'
             );
-
-            document.body.appendChild(overlay);
-            document.body.style.overflow = 'hidden';
         });
     });
 </script>
