Set Chengdu to already selling

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -20,9 +20,17 @@
                         <div class="recital-info-bottom">
                             <div class="coverflow-recital-title"><%= recital.city %>站 - 
                                 <% if recital.sold_out? %>
-                                已预订完
+                                  <% if recital.city != '成都' %>
+                                    已预订完
+                                  <% else %>
+                                    已售完
+                                  <% end %>
                                 <% else %>
-                                正在预订中
+                                  <% if recital.city != '成都' %>
+                                    正在预订中
+                                  <% else %>
+                                    正在售票中
+                                  <% end %>
                                 <% end %>
                             </div>
                             <div class="font-larger"><%= (recital.start_time.strftime('%Y 年 %m 月 %d 日') unless recital.start_time.nil?) + ' - ' + recital.music_hall%></div>
@@ -38,9 +46,17 @@
                         </div>
                         <div class="recital-status">
                             <% if recital.sold_out? %>
-                                已<br />预<br />订<br />完
+                              <% if recital.city != '成都' %>
+                                    已<br />预<br />订<br />完
+                              <% else %>
+                                    已<br />售<br />完
+                              <% end %>
                             <% else %>
-                                正<br />在<br />预<br />订
+                              <% if recital.city != '成都' %>
+                                    正<br />在<br />预<br />订
+                              <% else %>
+                                    正<br />在<br />售<br />票
+                              <% end %>
                             <% end %>
                         </div>
                     </div>
