Add picture model

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,8 +1,8 @@
 
 <div class="section-recitals">
-    <div class="section-title">
+<!--     <div class="section-title">
         购票
-    </div>
+    </div> -->
     <div class="coverflow-cont">
         <div class="coverflow">
             <% @recitals.each do |recital| %>
@@ -110,7 +110,7 @@
 </div>
 
 <div class="section-intro-video">
-    <div class="section-title">宣传视频</div>
+    <div class="section-title">Animenz 视频</div>
     <div class="outer-container">
         <div class="index-intro-video-cont">
             <div class="index-intro-video">
@@ -123,7 +123,7 @@
 </div>
 
 <div class="section-videos">
-    <div class="section-title">Animenz 视频</div>
+    <!-- <div class="section-title">Animenz 视频</div> -->
     <div class="outer-container">
         <div class="index-videos clearfix">
             <% @videos.each do |video| %>
