Add payment attentions.

--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -265,6 +265,7 @@ input[type="password"] {
 .no-padding { padding: 0 !important; }
 .padding-1 { padding: 1em; }
 .line-height-2 { line-height: 2; }
+.indent { text-indent: 2em; }
 .clearfix {
     &:before, &:after {
         content: " ";
