--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -36,6 +36,19 @@
 </div>
 </div>
 
+<% if @recital.id == 1 %>
+<br />
+<div class="outer-container light-panel">
+    <h2 class="align-center">付款注意事项</h2>
+    <h3 class="indent line-height-2">成都站门票已开售，下成都站门票订单的用户请于三天内联系以下工作人员付款，逾期将自动退回票池。</h3>
+    <ul>
+        <li>杨小姐 手机 - 15519026686</li>
+        <li>李先生 手机 - 13984155725</li>
+        <li>陈小姐 QQ - 1963378915</li>
+    </ul>
+</div>
+<% end %>
+
 <br />
 
 <div class="outer-container">
