--- a/app/assets/stylesheets/seat.scss
+++ b/app/assets/stylesheets/seat.scss
@@ -52,8 +52,8 @@
             pointer-events: none;
         }
         &:checked + label, &.seat-checked + label {
-            background-color: #FFCDD2;
-            box-shadow: 0 0 1em $lighter-50, 0 0 0 1px #26A69A;
+            background-color: #fff;
+            box-shadow: 0 0 1em $lighter-50, 0 0 0 1px #000;
         }
         
     }
