--- a/app/assets/stylesheets/seat.scss
+++ b/app/assets/stylesheets/seat.scss
@@ -50,6 +50,7 @@
             opacity: 0.5;
             cursor: not-allowed;
             pointer-events: none;
+            background-color: #546E7A;
         }
         &:checked + label, &.seat-checked + label {
             background-color: #fff;
@@ -88,12 +89,20 @@
         pointer-events: none;
         box-shadow: 2px 2px 6px $darken-50;
         opacity: 0.8;
+        z-index: 1;
     }
-    
+
     &:hover > .seat-tooltip {
         display: block;
     }
+    
+    // tooltip position of first row
+    .seat-row:first-child > &:hover > .seat-tooltip {
+        top: 100%;
+        bottom: auto;
+    }
 
+    // do not display tooltip for sold seats
     &:hover > input[type="checkbox"][disabled] + label + .seat-tooltip {
         display: none;
     }
