--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -40,11 +40,11 @@
 <br />
 <div class="outer-container light-panel">
     <h2 class="align-center">付款注意事项</h2>
-    <h3 class="indent line-height-2">成都站门票已开售，下成都站门票订单的用户请于三天内联系以下工作人员付款，逾期将自动退回票池。</h3>
+    <h3 class="indent line-height-2">成都站门票已开售，下成都站门票订单的用户请于三天内将款项转账到如下支付宝，逾期将自动退回票池。十分抱歉由于本站的支付渠道正在审批，暂时只能通过此方法付款，我们会尽快上线对应功能。如有疑问请联系客服:</h3>
     <ul>
-        <li>杨小姐 手机 - 15519026686</li>
-        <li>李先生 手机 - 13984155725</li>
-        <li>陈小姐 QQ - 1963378915</li>
+        <li>支付宝 - 15519026686</li>
+        <li>客服 李先生 手机 - 13984155725</li>
+        <li>客服 陈小姐 QQ - 1963378915</li>
     </ul>
 </div>
 <% end %>
