--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -34,6 +34,11 @@
                                 <button class="button order-bar-detail-button">查看详情</button>
                             <% end %>
                         </td>
+                        <td>
+                            <a href="javascript:;" id="link-delete-order" data-action="<%= order_path(order) %>" data-redirect="<%= orders_path %>">
+                                <button class="button order-bar-detail-button" type="button">删除订单</button>
+                            </a>
+                        </td>
                     </tr>
                 </table>
             </li>
