--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -85,6 +85,10 @@ input[type="password"] {
     background: #12B2B2;
     padding: .7em 1.8em;
     box-shadow: 0 0 1px 1px $darken-30 inset;
+    
+    &.button-error {
+        background: #C62828;
+    }
 }
 
 .login-container {
