--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -82,12 +82,33 @@
         </div>
     </div>
     <div class="nwui-continue align-center submit-opbar">
-        <%= f.submit '提交', class: 'button submit-submit-btn' %>
+        <%= f.submit '提交', class: 'button submit-submit-btn', id: 'submit-submit-btn' %>
     </div>
 <% end %>
 </div>
 
 <% content_for :script do %>
+<script>
+
+function validatePhoneNumber(phone) {
+    // var r = /\d{11}/;
+    // www.jianshu.com/p/e8477fdccbe9
+    var r = /^1(3[0-9]|4[57]|5[0-35-9]|8[0-9]|70)-?\d{4}-?\d{4}$/;
+    return r.test(phone);
+}
+
+function submitValidation(e) {
+    var phone = document.getElementById('submit-input-phone').value;
+    if (!validatePhoneNumber(phone)) {
+        alert('电话号码格式有问题，请检查并重试！');
+        e.preventDefault();
+        return false;
+    }
+}
+
+document.getElementById('submit-submit-btn').addEventListener('click', submitValidation);
+</script>
+
 <script>
 (function () {
     var InfoStatus = {
