--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -270,6 +270,7 @@ input[type="password"] {
 .padding-1 { padding: 1em; }
 .line-height-2 { line-height: 2; }
 .indent { text-indent: 2em; }
+.hidden { display: none; }
 .clearfix {
     &:before, &:after {
         content: " ";
