Delete order and iOS modal fix.

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -35,7 +35,7 @@
                             <% end %>
                         </td>
                         <td>
-                            <a href="javascript:;" id="link-delete-order" data-action="<%= order_path(order) %>" data-redirect="<%= orders_path %>">
+                            <a href="javascript:;" class="link-delete-order" data-action="<%= order_path(order) %>" data-redirect="<%= orders_path %>">
                                 <button class="button order-bar-detail-button" type="button">删除订单</button>
                             </a>
                         </td>
