--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -37,11 +37,13 @@ html {
     font-size: 12px;
     height: 100%;
     color: white;
+    position: relative;
 }
 
 body {
     height: 100%;
     box-sizing: border-box;
+    position: relative;
     .page-wrapper {
         min-height: 100%;
         height: auto !important;
