--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -117,7 +117,7 @@
 function validatePhoneNumber(phone) {
     // var r = /\d{11}/;
     // www.jianshu.com/p/e8477fdccbe9
-    var r = /^1(3[0-9]|4[57]|5[0-35-9]|8[0-9]|70)-?\d{4}-?\d{4}$/;
+    var r = /^1(3[0-9]|4[57]|5[0-35-9]|8[0-9]|7[0687])-?\d{4}-?\d{4}$/;
     return r.test(phone);
 }
 
