--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -6,8 +6,13 @@
     </div>
     
     <div class="recital-detail-cont overflow-auto">
-        <div class="recital-title font-bolder font-x-large">
-            <%= @recital.city %>站
+        <div class="clearfix">
+            <a class="recital-back-button float-left" href="/">
+                <i class="fa fa-chevron-left"></i> 返回
+            </a>
+            <div class="recital-title align-center font-bolder font-x-large">
+                <%= @recital.city %>站
+            </div>
         </div>
         <!--<hr class="hr-recital" />-->
         <dl class="dl-horizontal">
